--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -11848,26 +11848,6 @@ a.anchor-link {
 </head>
 
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
-<style type="text/css">
-//div.output_wrapper {
-//  margin-top: 0px;
-//}
-.input_hidden {
-  display: none;
-//  margin-top: 5px;
-}
-</style>
-
-<!-- script>
-$(document).ready(function(){
-  $(".output_wrapper").click(function(){
-      $(this).prev('.input_hidden').slideToggle();
-  });
-})
-</script -->
-
 
 
 <body>
@@ -12634,7 +12614,6 @@ $$$$(-1)^{\text{sign}}(\text{1 + fraction})2^{\text{exponent} - p}$$<ul>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
@@ -12644,8 +12623,6 @@ $$$$(-1)^{\text{sign}}(\text{1 + fraction})2^{\text{exponent} - p}$$<ul>
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -12690,7 +12667,6 @@ $$$$(-1)^{\text{sign}}(\text{1 + fraction})2^{\text{exponent} - p}$$<ul>
 
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
@@ -12700,8 +12676,6 @@ $$$$(-1)^{\text{sign}}(\text{1 + fraction})2^{\text{exponent} - p}$$<ul>
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -12765,7 +12739,6 @@ $$$$(-1)^{\text{sign}}(\text{1 + fraction})2^{\text{exponent} - p}$$<ul>
 </div>
 </div><div class="fragment">
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
@@ -12782,8 +12755,6 @@ $$$$(-1)^{\text{sign}}(\text{1 + fraction})2^{\text{exponent} - p}$$<ul>
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -12840,7 +12811,6 @@ $$$$(-1)^{\text{sign}}(\text{1 + fraction})2^{\text{exponent} - p}$$<ul>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
@@ -12850,8 +12820,6 @@ $$$$(-1)^{\text{sign}}(\text{1 + fraction})2^{\text{exponent} - p}$$<ul>
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -12896,7 +12864,6 @@ $$$$(-1)^{\text{sign}}(\text{1 + fraction})2^{\text{exponent} - p}$$<ul>
 
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[6]:</div>
 <div class="inner_cell">
@@ -12906,8 +12873,6 @@ $$$$(-1)^{\text{sign}}(\text{1 + fraction})2^{\text{exponent} - p}$$<ul>
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -12952,7 +12917,6 @@ $$$$(-1)^{\text{sign}}(\text{1 + fraction})2^{\text{exponent} - p}$$<ul>
 
 </div></section><section>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
@@ -12962,8 +12926,6 @@ $$$$(-1)^{\text{sign}}(\text{1 + fraction})2^{\text{exponent} - p}$$<ul>
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13008,7 +12970,6 @@ $$$$(-1)^{\text{sign}}(\text{1 + fraction})2^{\text{exponent} - p}$$<ul>
 
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[8]:</div>
 <div class="inner_cell">
@@ -13018,8 +12979,6 @@ $$$$(-1)^{\text{sign}}(\text{1 + fraction})2^{\text{exponent} - p}$$<ul>
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13073,7 +13032,6 @@ $$$$(-1)^{\text{sign}}(\text{1 + fraction})2^{\text{exponent} - p}$$<ul>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[9]:</div>
 <div class="inner_cell">
@@ -13087,8 +13045,6 @@ $$$$(-1)^{\text{sign}}(\text{1 + fraction})2^{\text{exponent} - p}$$<ul>
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13110,7 +13066,6 @@ b - c = -1.110223e-16
 
 </div><div class="fragment">
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[10]:</div>
 <div class="inner_cell">
@@ -13120,8 +13075,6 @@ b - c = -1.110223e-16
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13166,7 +13119,6 @@ b - c = -1.110223e-16
 
 </div></div><div class="fragment">
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[11]:</div>
 <div class="inner_cell">
@@ -13176,8 +13128,6 @@ b - c = -1.110223e-16
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13231,7 +13181,6 @@ b - c = -1.110223e-16
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[12]:</div>
 <div class="inner_cell">
@@ -13242,8 +13191,6 @@ b - c = -1.110223e-16
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13264,7 +13211,6 @@ b - c = -1.110223e-16
 
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[13]:</div>
 <div class="inner_cell">
@@ -13275,8 +13221,6 @@ b - c = -1.110223e-16
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13309,7 +13253,6 @@ b - c = -1.110223e-16
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[14]:</div>
 <div class="inner_cell">
@@ -13319,8 +13262,6 @@ b - c = -1.110223e-16
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13341,7 +13282,6 @@ b - c = -1.110223e-16
 
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[15]:</div>
 <div class="inner_cell">
@@ -13351,8 +13291,6 @@ b - c = -1.110223e-16
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13373,7 +13311,6 @@ b - c = -1.110223e-16
 
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[16]:</div>
 <div class="inner_cell">
@@ -13393,8 +13330,6 @@ b - c = -1.110223e-16
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13431,7 +13366,6 @@ b - 4294967295 == b ? True
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[17]:</div>
 <div class="inner_cell">
@@ -13443,8 +13377,6 @@ b - 4294967295 == b ? True
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13466,7 +13398,6 @@ a/3 =  [ 0.          0.33333333]
 
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[18]:</div>
 <div class="inner_cell">
@@ -13477,8 +13408,6 @@ a/3 =  [ 0.          0.33333333]
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13521,7 +13450,6 @@ a/3 =  [ 0.          0.33333333]
 </div>
 </div><div class="fragment">
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[19]:</div>
 <div class="inner_cell">
@@ -13532,8 +13460,6 @@ a/3 =  [ 0.          0.33333333]
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13580,7 +13506,6 @@ $$f(x) = \frac{1}{x^2}(1-\cos(x))$$<ul>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[20]:</div>
 <div class="inner_cell">
@@ -13598,8 +13523,6 @@ $$f(x) = \frac{1}{x^2}(1-\cos(x))$$<ul>
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13931,7 +13854,6 @@ AYUPi8akA6sAAAAASUVORK5CYII=
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[21]:</div>
 <div class="inner_cell">
@@ -13944,8 +13866,6 @@ AYUPi8akA6sAAAAASUVORK5CYII=
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -14002,7 +13922,6 @@ $$\text{Var}[r_t | r_0] = \frac{r_0\sigma^2}{\kappa}(e^{-\kappa t} - e^{-2\kappa
 </div>
 </div></section><section>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[22]:</div>
 <div class="inner_cell">
@@ -14017,8 +13936,6 @@ $$\text{Var}[r_t | r_0] = \frac{r_0\sigma^2}{\kappa}(e^{-\kappa t} - e^{-2\kappa
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -14524,7 +14441,6 @@ require(
 
 
 
-
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
     <!-- MathJax configuration -->
     <script type="text/x-mathjax-config">
@@ -14553,7 +14469,7 @@ Reveal.initialize({
     controls: true,
 
     // Display a presentation progress bar
-    progress: true,
+    //progress: true,
 
     // Push each slide change to the browser history
     history: false,
@@ -14563,7 +14479,7 @@ Reveal.initialize({
     slideNumber: true,
 
     // Enable touch events for navigation
-    touch: true,
+    //touch: true,
 
     // Enable the slide overview mode
     //overview: true,
@@ -14583,7 +14499,7 @@ Reveal.initialize({
     //autoSlide: 0,
 
     // Enable slide navigation via mouse wheel
-    mouseWheel: false,
+    //mouseWheel: false,
 
     // Transition style
     // transition: 'concave', // default/cube/page/concave/zoom/linear/fade/none
@@ -14609,6 +14525,7 @@ Reveal.configure({
     27: 'left'
   }
 });
+
 
 </script>
 
