--- a/Lecture13.slides.html
+++ b/Lecture13.slides.html
@@ -11848,26 +11848,6 @@ a.anchor-link {
 </head>
 
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
-<style type="text/css">
-//div.output_wrapper {
-//  margin-top: 0px;
-//}
-.input_hidden {
-  display: none;
-//  margin-top: 5px;
-}
-</style>
-
-<!-- script>
-$(document).ready(function(){
-  $(".output_wrapper").click(function(){
-      $(this).prev('.input_hidden').slideToggle();
-  });
-})
-</script -->
-
 
 
 <body>
@@ -12105,7 +12085,6 @@ $$
 </div>
 </div></section><section>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
@@ -12165,8 +12144,6 @@ $$
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -12485,7 +12462,6 @@ iIiIJMn/A4yGgAYVrV3zAAAAAElFTkSuQmCC
 
 </div></section><section>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
@@ -12575,8 +12551,6 @@ iIiIJMn/A4yGgAYVrV3zAAAAAElFTkSuQmCC
 </div>
 </div>
 
-</div>
-
 <div class="output_wrapper">
 <div class="output">
 
@@ -12599,7 +12573,6 @@ mt_min ~=  4900
 
 </div></section><section>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
@@ -12666,8 +12639,6 @@ mt_min ~=  4900
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13101,7 +13072,6 @@ kqSOHDBKkiRJkjr6O1xHLL/PH1uTAAAAAElFTkSuQmCC
 
 </div></section><section>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
@@ -13169,8 +13139,6 @@ kqSOHDBKkiRJkjr6O1xHLL/PH1uTAAAAAElFTkSuQmCC
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13708,7 +13676,6 @@ VMyJiIiIiIiUof8PD28KX8x5E+wAAAAASUVORK5CYII=
 
 </div></section><section>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[6]:</div>
 <div class="inner_cell">
@@ -13792,11 +13759,8 @@ VMyJiIiIiIiUof8PD28KX8x5E+wAAAAASUVORK5CYII=
 </div>
 </div>
 
-</div>
-
 </div></section><section>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
@@ -13865,8 +13829,6 @@ VMyJiIiIiIiUof8PD28KX8x5E+wAAAAASUVORK5CYII=
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -14295,7 +14257,6 @@ SZJ6xEGcJEmSJPXI/wO1NJ6zfMmMPgAAAABJRU5ErkJggg==
 
 </div></section><section>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[8]:</div>
 <div class="inner_cell">
@@ -14365,8 +14326,6 @@ SZJ6xEGcJEmSJPXI/wO1NJ6zfMmMPgAAAABJRU5ErkJggg==
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -14979,7 +14938,6 @@ require(
 
 
 
-
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
     <!-- MathJax configuration -->
     <script type="text/x-mathjax-config">
@@ -15008,7 +14966,7 @@ Reveal.initialize({
     controls: true,
 
     // Display a presentation progress bar
-    progress: true,
+    //progress: true,
 
     // Push each slide change to the browser history
     history: false,
@@ -15018,7 +14976,7 @@ Reveal.initialize({
     slideNumber: true,
 
     // Enable touch events for navigation
-    touch: true,
+    //touch: true,
 
     // Enable the slide overview mode
     //overview: true,
@@ -15038,7 +14996,7 @@ Reveal.initialize({
     //autoSlide: 0,
 
     // Enable slide navigation via mouse wheel
-    mouseWheel: false,
+    //mouseWheel: false,
 
     // Transition style
     // transition: 'concave', // default/cube/page/concave/zoom/linear/fade/none
@@ -15055,6 +15013,7 @@ Reveal.initialize({
      // margin: 0,
      theme: 'white', // available themes are in /css/theme
 });
+
 
 // remap F5/ESC/b key
 Reveal.configure({
