--- a/Lecture8.slides.html
+++ b/Lecture8.slides.html
@@ -11848,26 +11848,6 @@ a.anchor-link {
 </head>
 
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
-<style type="text/css">
-//div.output_wrapper {
-//  margin-top: 0px;
-//}
-.input_hidden {
-  display: none;
-//  margin-top: 5px;
-}
-</style>
-
-<!-- script>
-$(document).ready(function(){
-  $(".output_wrapper").click(function(){
-      $(this).prev('.input_hidden').slideToggle();
-  });
-})
-</script -->
-
 
 
 <body>
@@ -12357,7 +12337,6 @@ $$</p>
 </div>
 </div></section><section>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
@@ -12377,8 +12356,6 @@ $$</p>
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -12920,7 +12897,6 @@ require(
 
 
 
-
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
     <!-- MathJax configuration -->
     <script type="text/x-mathjax-config">
@@ -12949,7 +12925,7 @@ Reveal.initialize({
     controls: true,
 
     // Display a presentation progress bar
-    progress: true,
+    //progress: true,
 
     // Push each slide change to the browser history
     history: false,
@@ -12959,7 +12935,7 @@ Reveal.initialize({
     slideNumber: true,
 
     // Enable touch events for navigation
-    touch: true,
+    //touch: true,
 
     // Enable the slide overview mode
     //overview: true,
@@ -12979,7 +12955,7 @@ Reveal.initialize({
     //autoSlide: 0,
 
     // Enable slide navigation via mouse wheel
-    mouseWheel: false,
+    //mouseWheel: false,
 
     // Transition style
     // transition: 'concave', // default/cube/page/concave/zoom/linear/fade/none
@@ -12995,15 +12971,6 @@ Reveal.initialize({
      // height: 100%,
      // margin: 0,
      theme: 'white', // available themes are in /css/theme
-});
-
-// remap F5/ESC/b key
-Reveal.configure({
-  keyboard: {
-    66: 'right',
-    116: 'left',
-    27: 'left'
-  }
 });
 
 </script>
