--- a/Lecture2.slides.html
+++ b/Lecture2.slides.html
@@ -12464,7 +12464,7 @@ $$\scriptsize  L=\left(\begin{matrix}1 & 0 & 0\\-3 & 1 & 0\\-1 & 2 & 1\end{matri
 
 </div>
 </div>
-</div>
+</div></section><section>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
