--- a/Lecture9.slides.html
+++ b/Lecture9.slides.html
@@ -12510,16 +12510,16 @@ $$<p>and $x_j \geq 0$.</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>The LP problem can be formulated as:
-\begin{equation<em>}
+<p>The LP problem can be formulated as:</p>
+$$
 \min_{\bx} \left( \sum_i x_i P_i \right)
-\end{equation</em>}
+$$$$
 \begin{aligned}
-\mbox{such that} &amp; \sum_{i=1,10; M_i\geq k} \; C_i(t)x<em>i +100\sum</em>{i=1,10; M_i= k} \;x_i - s<em>k + s</em>{k-1}= L_k, \;\;  k = 1,2,\cdots, 8
-\
-     &amp; x_i \geq 0 \;\; i = 1,2,\cdots, 10; \;\;\; s_k \geq 0 \;\;  k = 1,2,\cdots, 8
+\mbox{such that} & \sum_{i=1,10; M_i\geq k} \; C_i(t)x_i +100\sum_{i=1,10; M_i= k} \;x_i - s_k + s_{k-1}= L_k, \;\;  k = 1,2,\cdots, 8
+\\
+     & x_i \geq 0 \;\; i = 1,2,\cdots, 10; \;\;\; s_k \geq 0 \;\;  k = 1,2,\cdots, 8
 \end{aligned}
-where we assume $s_0 = 0$.</p>
+$$<p>where we assume $s_0 = 0$.</p>
 
 </div>
 </div>
@@ -12682,6 +12682,7 @@ $$<p>where we set $s_0 = 0$.</p>
 </tbody>
 </table>
 <p>And here is the set of bonds that can be invested in:</p>
+<p><small></p>
 <table>
 <thead><tr>
 <th style="text-align:center">Bonds</th>
@@ -12747,7 +12748,8 @@ $$<p>where we set $s_0 = 0$.</p>
 </tr>
 </tbody>
 </table>
-<p>Find the <strong>least cost</strong> portfolio of bonds so that the pension fund can meet its future liabilities. Please show your LP problem set up.</p>
+<p><normal>
+Find the <strong>least cost</strong> portfolio of bonds so that the pension fund can meet its future liabilities. Please show your LP problem set up.</p>
 
 </div>
 </div>
