--- a/Lecture8.slides.html
+++ b/Lecture8.slides.html
@@ -12440,21 +12440,16 @@ The solution from Nelder-Mead: [ 1.  1.  1.  1.  1.  1.]
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h4 id="2.1-Steepest-Descent-Method">2.1 Steepest Descent Method<a class="anchor-link" href="#2.1-Steepest-Descent-Method">&#182;</a></h4><ul>
-<li><p>If the objective function is differentiable, we have
+<li>If the objective function is differentiable, we have</li>
+</ul>
 $$
-f(\bx^k + t \bs\delta x) \approx f(\bx^k)</p>
-
-<pre><code>                 +t [ {\bs\nabla} f(\bx^k)^T {\bs\delta x} ]                        
-</code></pre>
-<p>$$</p>
-</li>
-<li><p>This means choosing <strong>gradient</strong> direction
+f(\bx^k + t \bs\delta x) \approx f(\bx^k) + t [ {\bs\nabla} f(\bx^k)^T {\bs\delta x} ]                        
+$$<ul>
+<li>This means choosing <strong>gradient</strong> direction</li>
+</ul>
 $$
 \bs\delta x = - {\bs\nabla} f(\bx^k)
-$$
-will lead to the <strong>steepest</strong> descent at points sufficiently close to $\bx^k$.</p>
-</li>
-</ul>
+$$<p>will lead to the <strong>steepest</strong> descent at points sufficiently close to $\bx^k$.</p>
 
 </div>
 </div>
