--- a/Lecture10.slides.html
+++ b/Lecture10.slides.html
@@ -12164,7 +12164,7 @@ p(x) &= \exp((\lambda_1 -1) + \lambda_2 x)
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input_hidden">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[55]:</div>
+<div class="prompt input_prompt">In&nbsp;[31]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">x</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">arange</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span> <span class="mi">10</span><span class="p">,</span> <span class="o">.</span><span class="mi">05</span><span class="p">)</span>
@@ -13243,7 +13243,7 @@ $$<ul>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input_hidden">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[56]:</div>
+<div class="prompt input_prompt">In&nbsp;[32]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">inst</span> <span class="k">import</span> <span class="n">BlackScholes</span>
@@ -13374,7 +13374,7 @@ $$ b(t) \mathbb{E}[(s(t)-k)^+] = b(t) \sum_i p_i (s_i - k)^+ = v(k) $$<p></p>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input_hidden">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[57]:</div>
+<div class="prompt input_prompt">In&nbsp;[33]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">dual</span> <span class="o">=</span> <span class="n">me</span><span class="o">.</span><span class="n">MaxEntDual</span><span class="p">(</span><span class="n">q</span><span class="p">,</span> <span class="n">a</span><span class="p">,</span> <span class="n">cs</span><span class="p">,</span> <span class="n">e</span><span class="p">)</span>
@@ -13882,7 +13882,7 @@ iIiIxJgKdhERERGRGFPBLiIiIiISY/8LvorEUdeAhmQAAAAASUVORK5CYII=
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input_hidden">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[58]:</div>
+<div class="prompt input_prompt">In&nbsp;[34]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">dual</span> <span class="o">=</span> <span class="n">me</span><span class="o">.</span><span class="n">MaxEntDual</span><span class="p">(</span><span class="n">qn</span><span class="p">,</span> <span class="n">a</span><span class="p">,</span> <span class="n">cs</span><span class="p">,</span> <span class="n">e</span><span class="p">)</span>
@@ -14600,7 +14600,7 @@ $$<ul>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input_hidden">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[59]:</div>
+<div class="prompt input_prompt">In&nbsp;[35]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">fmt</span>
@@ -14749,7 +14749,7 @@ $$\begin{array}
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input_hidden">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[60]:</div>
+<div class="prompt input_prompt">In&nbsp;[36]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">swapCons</span><span class="p">(</span><span class="n">coupons</span><span class="p">,</span> <span class="n">mats</span><span class="p">,</span> <span class="n">freq</span><span class="p">)</span> <span class="p">:</span>
@@ -14811,7 +14811,7 @@ $$\begin{array}
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input_hidden">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[61]:</div>
+<div class="prompt input_prompt">In&nbsp;[37]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">ef</span> <span class="o">=</span> <span class="p">[</span><span class="mi">0</span><span class="p">,</span> <span class="mi">2</span><span class="p">,</span> <span class="mi">20</span><span class="p">]</span>
@@ -14911,7 +14911,7 @@ $$\begin{array}
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input_hidden">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[62]:</div>
+<div class="prompt input_prompt">In&nbsp;[38]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">figure</span><span class="p">(</span><span class="n">figsize</span><span class="o">=</span><span class="p">[</span><span class="mi">12</span><span class="p">,</span> <span class="mi">4</span><span class="p">])</span>
@@ -15391,7 +15391,7 @@ TkSuQmCC
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input_hidden">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[63]:</div>
+<div class="prompt input_prompt">In&nbsp;[39]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">fmt</span><span class="o">.</span><span class="n">displayDF</span><span class="p">(</span><span class="n">df_swap</span><span class="o">.</span><span class="n">T</span><span class="p">,</span> <span class="s2">&quot;2f&quot;</span><span class="p">)</span>
@@ -15513,7 +15513,7 @@ TkSuQmCC
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input_hidden">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[64]:</div>
+<div class="prompt input_prompt">In&nbsp;[40]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">figure</span><span class="p">(</span><span class="n">figsize</span><span class="o">=</span><span class="p">[</span><span class="mi">12</span><span class="p">,</span> <span class="mi">4</span><span class="p">])</span>
@@ -16258,7 +16258,7 @@ BLjjbWZmZmaWgP8HPG6Kh2K1SY4AAAAASUVORK5CYII=
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input_hidden">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[65]:</div>
+<div class="prompt input_prompt">In&nbsp;[41]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">par</span><span class="p">[</span><span class="mi">4</span><span class="p">]</span> <span class="o">=</span> <span class="o">.</span><span class="mi">03</span>
@@ -16274,7 +16274,7 @@ BLjjbWZmZmaWgP8HPG6Kh2K1SY4AAAAASUVORK5CYII=
 <span class="k">for</span> <span class="n">e</span><span class="p">,</span> <span class="n">f</span> <span class="ow">in</span> <span class="nb">zip</span><span class="p">(</span><span class="n">ef</span><span class="p">,</span> <span class="n">fit</span><span class="p">)</span> <span class="p">:</span> 
     <span class="n">df_swap_arb</span><span class="p">[</span><span class="s2">&quot;Fit Error </span><span class="si">%%</span><span class="s2"> ($W^{-1} = </span><span class="si">%.1f</span><span class="s2">E$)&quot;</span> <span class="o">%</span> <span class="p">(</span><span class="n">e</span><span class="o">*</span><span class="mi">2</span><span class="p">)]</span> <span class="o">=</span> <span class="p">(</span><span class="n">f</span><span class="o">-</span><span class="n">par</span><span class="p">)</span><span class="o">*</span><span class="mi">100</span>
 
-<span class="n">fmt</span><span class="o">.</span><span class="n">displayDF</span><span class="p">(</span><span class="n">df_swap_arb</span><span class="o">.</span><span class="n">T</span><span class="p">,</span> <span class="s2">&quot;3g&quot;</span><span class="p">)</span>
+<span class="n">fmt</span><span class="o">.</span><span class="n">displayDF</span><span class="p">(</span><span class="n">df_swap_arb</span><span class="o">.</span><span class="n">T</span><span class="p">,</span> <span class="s2">&quot;3g&quot;</span><span class="p">,</span> <span class="mi">1</span><span class="p">)</span>
 </pre></div>
 
 </div>
@@ -16292,7 +16292,7 @@ BLjjbWZmZmaWgP8HPG6Kh2K1SY4AAAAASUVORK5CYII=
 
 
 <div class="output_html rendered_html output_subarea ">
-<center><font size=2><table border="1" class="dataframe">
+<center><font size=1><table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
       <th></th>
@@ -16415,7 +16415,7 @@ BLjjbWZmZmaWgP8HPG6Kh2K1SY4AAAAASUVORK5CYII=
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input_hidden">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[66]:</div>
+<div class="prompt input_prompt">In&nbsp;[42]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">figure</span><span class="p">(</span><span class="n">figsize</span><span class="o">=</span><span class="p">[</span><span class="mi">12</span><span class="p">,</span> <span class="mi">4</span><span class="p">])</span>
@@ -18077,8 +18077,16 @@ $$<ul>
 </tr>
 </tbody>
 </table>
-<p>C-Shapley/CAS allocation:</p>
-<ul>
+
+</div>
+</div>
+</div></section><section>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="C-Shapley/CAS-allocation:">C-Shapley/CAS allocation:<a class="anchor-link" href="#C-Shapley/CAS-allocation:">&#182;</a></h2><ul>
 <li>stands out with the best set of features</li>
 <li>a candidate for universal risk capital allocation method<ul>
 <li>applicable to a wide variety of risk capital metrics in banks</li>
