--- a/Lecture11.slides.html
+++ b/Lecture11.slides.html
@@ -12157,6 +12157,7 @@ $$<ul>
 <li>Just plug the exact values of the functions/variable into the FDM scheme and calculate the error, for Euler scheme, this is,</li>
 </ul>
 \begin{aligned}
+\small
 \mathcal{N}_h y(t^n) & = y(t^{n+1}) - y(t^n)  - h f(t^n, y(t^n))
 \\
     & = y(t^{n}+h) - y(t^n)  - h f(t^n, y(t^n))
