--- a/Lecture13.slides.html
+++ b/Lecture13.slides.html
@@ -11997,6 +11997,7 @@ $$<ul>
 <li>Write the Crank-Nicolson method as</li>
 </ul>
 \begin{aligned}
+\small
 \renewcommand{fD}{\mathfrak{D}}
 \FDut  = & \frac{1}{4}  \sigma^2 x_i^2 \left\{ \FDuxx + \frac{u_{i+1,k+1}-2u_{i,k+1}+u_{i-1,k+1}}{\triangle x^2} \right\}
 \\ 
