updated setup guide

--- a/PythonSetup.slides.html
+++ b/PythonSetup.slides.html
@@ -11919,7 +11919,7 @@ $(document).ready(function(){
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Python-Installation">Python Installation<a class="anchor-link" href="#Python-Installation">&#182;</a></h2><p><strong>Python version 2.7.x</strong></p>
+<h2 id="Python-Installation">Python Installation<a class="anchor-link" href="#Python-Installation">&#182;</a></h2><p><strong>Python version 3.6.x</strong></p>
 <ul>
 <li>Python 3.x is not backward compatible</li>
 <li>either 32bit or 64bit version works, 64bit is recommended </li>
@@ -11927,16 +11927,12 @@ $(document).ready(function(){
 <p>Recommend using a Python distribution:</p>
 <ul>
 <li><a href=http://continuum.io/downloads>Anaconda</a>: a popular free Python distribution</li>
-<li><a href=https://www.enthought.com/products/canopy/>Enthought Canopy</a>: free for students</li>
 </ul>
 <p>Both distributions come with necessary packages like IPython/numpy/pandas etc.</p>
 <ul>
 <li>Anaconda comes with command line package manager <code>conda</code></li>
-<li>Enthought canopy comes with a graphical package manager</li>
-<li><a href=https://pypi.python.org/pypi/pip>pip</a> can be used to install Python packages that are not part of Enthought Anaconda distribution (rarely needed)</li>
-<li>both distributions support major OSes</li>
+<li><a href=https://pypi.python.org/pypi/pip>pip</a> can be used to install Python packages that are not part of Anaconda distribution (rarely needed)</li>
 </ul>
-<p>Difficulties of installing Enthought Canopy has been reported on MacOS, Anaconda is recommended for MacOS.</p>
 
 </div>
 </div>
@@ -11947,14 +11943,11 @@ $(document).ready(function(){
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Use-IPython-Notebook">Use IPython Notebook<a class="anchor-link" href="#Use-IPython-Notebook">&#182;</a></h2><p>IPython notebook is a versatile and productive environment for scientific computing. All the lecture slides are created from IPython notebook.</p>
-<ul>
-<li>The required IPython version is 2.4.1 or later</li>
-</ul>
 <p>The following link is a step by step tutorial of ipython notebook, you can ignore anything related to plotly, we are not going the use it in the class. But the rest, in particular matpliblib, numpy and pandas will be used throughout the class. Please following the tutorial to get yourself familiar with them.</p>
 <p><a href="https://plot.ly/python/ipython-notebook-tutorial/">https://plot.ly/python/ipython-notebook-tutorial/</a></p>
 <p>The following is the official documentation of IPython, it is also worthwhile to go through:</p>
 <p><a href="http://ipython.readthedocs.org/en/stable/interactive/tutorial.html">http://ipython.readthedocs.org/en/stable/interactive/tutorial.html</a></p>
-<p>and google is another exellent source for any Python or IPython questions.</p>
+<p>and Google is another exellent source for any Python or IPython questions.</p>
 <ul>
 <li>IPython notebook works with newer versions of all major browsers. (IE older than version 10 does not work)</li>
 </ul>
@@ -11968,7 +11961,7 @@ $(document).ready(function(){
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Python-code/data-for-the-class">Python code/data for the class<a class="anchor-link" href="#Python-code/data-for-the-class">&#182;</a></h2><p>The python code and data are in the subfolder lib and data under your nyumath2048 folder.</p>
-<p><strong>VERY IMPORTANT:</strong> You need to create an environment variable PYTHONPATH and add the full path to your local nyumath2048/lib folder to your PYTHONPATH.</p>
+<p><span style="color:red">**VERY IMPORTANT:** You need to create an environment variable PYTHONPATH and add the full path to your local nyumath2048/lib folder to your PYTHONPATH.</span></p>
 <ul>
 <li>this step allows python interpretor to find the python modules for the class</li>
 <li>you won't be able to run the class IPython notebook without performing this step</li>
